# sc2-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  rustfmt.toml  search-index.js
examples/: bot-micro.rs  bot-mp.rs  bot-simple.rs  debug.rs  refactor.rs  replay.rs
examples/bot-micro/: main.rs
examples/bot-mp/: main.rs
examples/bot-simple/: main.rs
examples/debug/: main.rs
examples/examples-common/: Cargo.toml
examples/examples-common/src/: lib.rs  marine_micro_bot.rs  marine_micro_cell.rs  marine_micro_lobe.rs  terran_bot.rs  terran_cell.rs  terran_lobe.rs
examples/reactive/: main.rs
examples/replay/: main.rs
implementors/error_chain/: trait.ChainedError.js
implementors/sc2/: trait.ResultExt.js
nuro-sc2-proto/: Cargo.toml
nuro-sc2-proto/src/: common.rs  data.rs  lib.rs  query.rs  raw.rs  sc2api.rs  spatial.rs
sc2/: MeleeBuilder.t.html  all.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html  struct.LauncherSettings.html  struct.MeleeBuilder.html  trait.ResultExt.html  type.Result.html
sc2-proto/: raw.proto
sc2/action/: ActionClient.t.html  ActionTarget.t.html  enum.ActionTarget.html  index.html  sidebar-items.js  struct.Action.html  struct.ActionClient.html
sc2/agent/: AgentBuilder.t.html  index.html  sidebar-items.js  struct.AgentBuilder.html
sc2/ai/: OpponentBuilder.t.html  index.html  sidebar-items.js  struct.OpponentBuilder.html
sc2/data/: Ability.t.html  AbilityData.t.html  BuffData.t.html  EffectData.t.html  GameResult.t.html  PlayerSetup.t.html  Point2I.t.html  PowerSource.t.html  Race.t.html  Rect2.t.html  Rect2I.t.html  ReplayInfo.t.html  ReplayPlayerInfo.t.html  Score.t.html  UnitType.t.html  Upgrade.t.html  UpgradeData.t.html  enum.Ability.html  enum.Alliance.html  enum.Buff.html  enum.Difficulty.html  enum.DisplayType.html  enum.GameResult.html  enum.Map.html  enum.PlayerSetup.html  enum.Race.html  enum.UnitType.html  enum.Upgrade.html  enum.Visibility.html  index.html  sidebar-items.js  struct.AbilityData.html  struct.BuffData.html  struct.Effect.html  struct.EffectData.html  struct.GameSetup.html  struct.ImageData.html  struct.MapInfo.html  struct.PlayerResult.html  struct.PowerSource.html  (+16 more)
sc2/debug/: DebugAabb.t.html  DebugLine.t.html  DebugSphere.t.html  DebugText.t.html  DebugTextTarget.t.html  enum.DebugCommand.html  enum.DebugTextTarget.html  index.html  sidebar-items.js  struct.DebugAabb.html  struct.DebugClient.html  struct.DebugLine.html  struct.DebugSphere.html  struct.DebugText.html
sc2/launcher/: LauncherSettings.t.html  struct.LauncherSettings.html
sc2/observer/: EventAck.t.html  ObserverClient.t.html  enum.Event.html  index.html  sidebar-items.js  struct.EventAck.html  struct.Observation.html  struct.ObserverClient.html
scripts/: auto-tag.sh  deploy.sh  publish.sh
src/: ability.rs  action.rs  agent.rs  ai.rs  buff.rs  client.rs  colors.rs  computer.rs  constants.rs  coordinator.rs  ctrlc_breaker.rs  debug.rs  frame.rs  game.rs  instance.rs  launcher.rs  lib.rs  melee.rs  observer.rs  participant.rs  player.rs  replay.rs  replay_observer.rs  result.rs  synapse.rs  synapses.rs  unit.rs  upgrade.rs  utils.rs  wine_utils.rs
src/client/: agent.rs  control.rs  mod.rs
src/data/: ability.rs  action.rs  buff.rs  common.rs  frame.rs  game.rs  image.rs  map_info.rs  mod.rs  observation.rs  player.rs  score.rs  unit.rs  upgrade.rs
src/lobes/: agent.rs  client.rs  ctrlc_breaker.rs  frame.rs  instance.rs  launcher.rs  melee.rs  mod.rs  observer.rs
src/old/: coordinator.rs  launcher.rs  participant.rs  replay_observer.rs
src/participant/: actions.rs  control.rs  debugging.rs  events.rs  mod.rs  observation.rs  observer.rs  query.rs  replay.rs  spatial_actions.rs
src/proto/: debug.rs  error.rs  mod.rs  score.rs  ui.rs
src/sc2/: action.rs.html  agent.rs.html  ai.rs.html  constants.rs.html  debug.rs.html  lib.rs.html  (+3 more)
(+74 files in other folders)
