[package]
name = "sc2"
version = "0.2.0"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "organelle networks for StarCraft II Client API"
license = "MIT"
documentation = "https://docs.rs/sc2-rs"
homepage = "https://github.com/awestlake87/sc2-rs"
repository = "https://github.com/awestlake87/sc2-rs"

[dependencies]
bytes = "0"
ctrlc = "3"
error-chain = "0"
futures = "0"
glob = "0"
nalgebra = "0"
organelle = "0"
protobuf = "1"
rand = "0"
regex = "0"
sc2-proto = "0"
tokio-core = "0"
tokio-timer = "0"
tokio-tungstenite = "0"
tungstenite = "0"
url = "1"
uuid = { version = "0", features = ["serde", "v4"] }

[[example]]
name = "bot-micro"
crate-type = ["bin"]
path = "examples/bot-micro.rs"

[[example]]
name = "bot-mp"
crate-type = ["bin"]
path = "examples/bot-mp.rs"

[dev-dependencies]
docopt = "0"
serde = "1"
serde_derive = "1"
