[package]
name = "sc2"
version = "0.2.1"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "organelle networks for StarCraft II Client API"
license = "MIT"
documentation = "https://docs.rs/sc2-rs"
homepage = "https://github.com/awestlake87/sc2-rs"
repository = "https://github.com/awestlake87/sc2-rs"

[dependencies]
bytes = "0"
ctrlc = "3"
error-chain = "0.11"
futures-await = "0.1"
glob = "0.2"
nalgebra = "0.13"
protobuf = "1.4"
rand = "0.4"
regex = "0.2"
sc2-proto = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
tokio-tungstenite = "0.5"
tungstenite = "0.5"
url = "1.6"
uuid = { version = "0.5", features = ["serde", "v4"] }

[dependencies.organelle]
path = "../organelle"

# [[example]]
# name = "bot-micro"
# crate-type = ["bin"]
# path = "examples/bot-micro.rs"

# [[example]]
# name = "bot-mp"
# crate-type = ["bin"]
# path = "examples/bot-mp.rs"

[[example]]
name = "refactor"
crate-type = ["bin"]
path = "examples/refactor.rs"

[dev-dependencies]
docopt = "0"
serde = "1"
serde_derive = "1"
