[package]
name = "sc2"
version = "0.4.0-alpha.3"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "Rust implementation of the StarCraft II Client API"
license = "MIT"
documentation = "https://docs.rs/sc2-rs"
homepage = "https://github.com/awestlake87/sc2-rs"
repository = "https://github.com/awestlake87/sc2-rs"

[dependencies]
bytes = "0"
colored = "1.6"
ctrlc = "3"
error-chain = "0.11"
futures-await = "0.1"
glob = "0.2"
nalgebra = "0.13"
protobuf = "1.4"
rand = "0.4"
regex = "0.2"
sc2-proto = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
tokio-tungstenite = "0.5"
tungstenite = "0.5"
url = "1.6"

[dev-dependencies]
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"

[[example]]
name = "bot-micro"
crate-type = ["bin"]
path = "examples/bot-micro.rs"

[[example]]
name = "bot-mp"
crate-type = ["bin"]
path = "examples/bot-mp.rs"

[[example]]
name = "bot-simple"
crate-type = ["bin"]
path = "examples/bot-simple.rs"

[[example]]
name = "debug"
crate-type = ["bin"]
path = "examples/debug.rs"

[[example]]
name = "replay"
crate-type = ["bin"]
path = "examples/replay.rs"