[package]
name = "examples-common"
version = "0.1.0"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]

[dependencies]
error-chain = "*"
glutin = "*"
nalgebra = "*"
num = "*"
rand = "*"
serde = "1.0"
serde_derive = "1.0"
sc2 = { path = "../../" }

[dependencies.organelle]
git = "https://github.com/awestlake87/organelle"
branch = "reactive"
